[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,29 @@
 <HTML>
+    <head>
+        <Title>
+            Article-one | Harsh Agrawal
+        </Title>
+    </head>
+    <Body>
+        <div>
+            <a href="/"> home </a>
+        </div>
+        <hr/>
+        <h3>
+            Article-one 
+        
+        </h3>
+        <div> Date: sept05-2016 </div>
+        <div>
+            <p>
+                This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article.
+            </p>
+            <p>
+                This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article.
+            </p>
+            <p>
+                This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article.
+            </p>
+        </div>
+    </Body>
 </HTML>
