[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
         <Title>
             Article-one | Harsh Agrawal
         </Title>
+        <meta name="viewport" content="width=device-width, intial-scale=1" />
     </head>
     <Body>
         <div>
