[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,27 +4,37 @@
             Article-one | Harsh Agrawal
         </Title>
         <meta name="viewport" content="width=device-width, intial-scale=1" />
+        <style>
+            .container {
+                max-width:; 800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <Body>
-        <div>
-            <a href="/"> home </a>
-        </div>
-        <hr/>
-        <h3>
-            Article-one 
-        
-        </h3>
-        <div> Date: sept05-2016 </div>
-        <div>
-            <p>
-                This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article.
-            </p>
-            <p>
-                This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article.
-            </p>
-            <p>
-                This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article.
-            </p>
+        <div class="container">
+            <div>
+                <a href="/"> home </a>
+            </div>
+            <hr/>
+            <h3>
+                Article-one 
+            
+            </h3>
+            <div> Date: sept05-2016 </div>
+            <div>
+                <p>
+                    This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article.
+                </p>
+                <p>
+                    This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article.
+                </p>
+                <p>
+                    This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article. This is article-one for my first article.
+                </p>
+            </div>
         </div>
     </Body>
 </HTML>
