--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,6 +4,7 @@
             Article-Two | Harsh Agrawal
         </Title>
         <meta name="viewport" content="width=device-width, intial-scale=1" />
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <Body>
         <div>
