[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,9 @@
             Hi! I am Harsh and I want to sleep
 		<h4> This is a new heading </h4>
         </div>
+        <script> 
+        alert('Hi, I\'m a javascript)
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
