--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
 		<h4> This is a new heading </h4>
         </div>
         <script> 
-            alert('Hi, I m a javascript');
+            alert("Hi");
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
