--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="https://scontent.fbom1-1.fna.fbcdn.net/v/t1.0-9/13239345_1063039630428698_8454970014684097737_n.jpg?oh=f482c3e0c8d54456266704d7998974a9&oe=5882B703" class="img-medium"/>
         </div>
         <br>
         <div id="main-text" class="center text-big bold">
