[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,17 +4,20 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id="madi" src="https://scontent.fbom1-1.fna.fbcdn.net/v/t1.0-9/13239345_1063039630428698_8454970014684097737_n.jpg?oh=f482c3e0c8d54456266704d7998974a9&oe=5882B703" class="img-medium"/>
+        
+        <div class="container">
+            <div class="center">
+                <img id="madi" src="https://scontent.fbom1-1.fna.fbcdn.net/v/t1.0-9/13239345_1063039630428698_8454970014684097737_n.jpg?oh=f482c3e0c8d54456266704d7998974a9&oe=5882B703" class="img-medium"/>
+            </div>
+            <br>
+            <div id="main-text" class="center text-big bold">
+                Hi! I am Harsh and I want to sleep
+    		<h4> This is a new heading </h4>
+            </div>
         </div>
-        <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! I am Harsh and I want to sleep
-		<h4> This is a new heading </h4>
-        </div>
-        <script> 
-            alert("Hi");
-        </script>
+        //<script> 
+          //  alert("Hi");
+        //</script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
