--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,7 @@
             <div> I did my B.Tech. from IIT Delhi. </div>
             <hr/>
             <div class="footer">
-                
+                this button <button id="counter"> Click me! </button> has been clicked <span id="count"> 0 </span> times
             </div>
         </div>
         
